[package]
name = "key-share-challenge"
version = "0.1.0"
edition = "2021"

[lib]
name = "key_share_service"
path = "src/lib.rs"

[[bin]]
name = "key_share_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = "0.1.0"
base64 = "0.22.1"
bincode = "1.3.3"
rand = "0.7.3"
rocket = {version = "0.5.1", features = ["json"]}
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threshold_crypto = "0.4.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }